debug.log
file:///C:/Users/carlo/Documents/evocomp/scripts/add-landing-translations.js:59
      card3_b3": "Transparent outputs for Finance and leadership."
              ^^^^

SyntaxError: Unexpected string
    at compileSourceTextModule (node:internal/modules/esm/utils:344:16)
    at ModuleLoader.moduleStrategy (node:internal/modules/esm/translators:105:18)
    at #translate (node:internal/modules/esm/loader:534:12)
    at ModuleLoader.loadAndTranslate (node:internal/modules/esm/loader:581:27)
    at async ModuleJob._link (node:internal/modules/esm/module_job:116:19)

Node.js v22.16.0
